# p3

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
p3/: _internals.py  compare.py  dataframe.py  function.py  generator.py  plugin.py
tests/_internals/: test_session_injection.py  test_spark_session.py
tests/plugin/: test_addoption.py  test_marker.py
tests/unit/: test_exceptions.py  test_expected_df.py  test_generation.py
